--- a/dashboard/src/app/modules/layout/users/create-user-modal/create-user-modal.component.html
+++ b/dashboard/src/app/modules/layout/users/create-user-modal/create-user-modal.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="angForm" (ngSubmit)="onSubmit()">
-    <h1 mat-dialog-title class="tiltle">Edit User</h1>
+    <h1 mat-dialog-title class="tiltle">Create User</h1>
     <div mat-dialog-content>
         <div class="example-container">
             <p>
@@ -14,6 +14,16 @@
             </p>
             <p>
                 <mat-form-field>
+                    <mat-label>Password</mat-label>
+                    <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
+                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+        </button>
+                    <mat-error *ngIf="!angForm.controls['password'].valid && angForm.controls['password'].touched">{{getErrorPassword()}}</mat-error>
+                </mat-form-field>
+            </p>
+            <p>
+                <mat-form-field>
                     <mat-label>Email</mat-label>
                     <input matInput formControlName="email" required>
                     <mat-error *ngIf="!angForm.controls['email'].valid && angForm.controls['email'].touched">{{getErrorEmail()}}</mat-error>
@@ -22,7 +32,7 @@
             <p>
                 <mat-form-field>
                     <mat-label>Role</mat-label>
-                    <mat-select formControlName="role" [(value)]="defaultRole" required>
+                    <mat-select formControlName="role" name="role" required>
                         <mat-option *ngFor="let r of roles" [value]="r">
                             {{r}}
                         </mat-option>
@@ -30,13 +40,9 @@
                     <mat-error *ngIf="!angForm.controls['role'].valid && angForm.controls['role'].touched">{{getErrorRole()}}</mat-error>
                 </mat-form-field>
             </p>
-            <p>
-                <mat-slide-toggle [checked]="active" [color]="color">
-                    Active </mat-slide-toggle>
-            </p>
         </div>
     </div>
-    <div mat-dialog-actions [align]="end">
+    <div mat-dialog-actions [align]="'end'">
         <button *ngIf="!showProgress" mat-raised-button style="background-color: rgb(229, 226, 226)" [mat-dialog-close]="true">Cancle</button>
         <button *ngIf="!showProgress" mat-raised-button type="submit" (disabled)="disabledBtn" color="primary">Create</button>
         <mat-progress-bar mode="indeterminate" *ngIf="showProgress"></mat-progress-bar>
