--- a/dashboard/src/app/modules/components/header-sidebar/header-sidebar.component.html
+++ b/dashboard/src/app/modules/components/header-sidebar/header-sidebar.component.html
@@ -1,13 +1,12 @@
-<!-- Toolbar -->
 <mat-toolbar color="primary" class="header">
     <span class="nav-tool-items">
         <mat-icon (click)="sidenav.toggle()" class="hamburger">menu</mat-icon>
     </span>
     <div>Super Star Store</div>
+    <button mat-raised-button (click)="logout()" color="warn">Logout</button>
 
 </mat-toolbar>
 <mat-sidenav-container>
-    <!-- Sidenav -->
     <mat-sidenav #sidenav [mode]="isBiggerScreen() ? 'over' : 'side'" [(opened)]="opened" [fixedInViewport]="true" [fixedTopGap]>
         <mat-nav-list>
             <a mat-list-item routerLink='/dashboard' routerLinkActive="active-link">
